@@ -5,6 +5,8 @@ acct_mgr-0.4 (not yet released) - branch 0.11
  resolved issues
  * #4677: Admin based chaining HtDigestStore & HtPasswdStore breaks config
    by adding dedicated options 'htdigest_file' and 'htpasswd_file'
+ * #8791: Obsolete patch needed for authentication against Jira
+   by adding sha512 hash support (requires Python>=2.5)
 
 
 acct_mgr-0.3.1 (13-Jul-2011) - branch 0.11
